# SwiftBits

./: .gitignore  LICENSE  README.md  pyproject.toml
src/swiftbits/: cli.py  config.py  embeddings.py  processor.py  server.py  store.py
tests/: test_cli.py  test_config.py  test_embeddings.py  test_processor.py  test_server.py  test_store.py
